--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 
 
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Document</title>
 </head>
-<h1>walid</h1>
-<h2></h2>
+
 
 
 <body>
     <p>hhhhhhhhhhhhh</p>
     <i>walid</i>
+    <p>my name is walid</p>
 <a href="contact.html">go to contact</a>
 </body>
 
